[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.11.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
pico-args = "0.5.0"
regex = "1.9.1"
serde = "1.0.181"
serde_json = "1.0.104"
